# sample-apj-sup-sa

agentic-workloads/agentic-analytics/: .gitignore  AGENTS.md  README.md
ai-coding-assistants/claude-code-proxy-on-aws/: README.md
ai-infra/llm-inference/real-time/ecs/: README.md  pyproject.toml
ai-infra/llm-inference/real-time/ecs/cfn/: 00-networking-dev.yaml  00-networking.yaml  10-cluster.yaml  20-vllm-model.yaml  30-litellm-router.yaml
ai-infra/llm-inference/real-time/ecs/models/gemma_4_31b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/gpt_oss_20b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/llama_4_scout_17b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/medgemma_27b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/mistral_small_3_2_24b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/qwen3_30b_a3b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/qwen3_8b/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/models/qwen3_coder_next/: README.md  __init__.py
ai-infra/llm-inference/real-time/ecs/notebooks/: real-time-ecs.ipynb
ai-infra/llm-inference/real-time/ecs/scripts/: build_notebook.py  smoke_test.py
ai-infra/llm-inference/real-time/ecs/src/vllm_realtime/: __init__.py  deployer.py  load_test.py
ai-infra/llm-inference/real-time/ecs/tests/: test_cfn_templates.py  test_helpers_mocked.py  test_model_service.py  test_models_registry.py  test_notebook.py  test_smoke_driver.py
(+85 files in other folders)
