[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-realtime"
version = "0.1.0"
description = "Real-time vLLM inference on Amazon ECS-on-EC2 (GPU) behind LiteLLM on Fargate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT-0" }
authors = [{ name = "AWS Solutions" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "httpx>=0.27",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "openai>=1.50",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "moto[secretsmanager,cloudformation,elbv2]>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
